--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Document</title>
+    <title>Quiz App Homepage</title>
   </head>
+  <header>
+    <h1>Quiz App</h1>
+  </header>
   <body></body>
 </html>
