--- a/index.html
+++ b/index.html
@@ -6,17 +6,26 @@
     <link rel="stylesheet" href="./styles.css" />
     <title>Quiz App Homepage</title>
   </head>
-  <header>
-    <h1 class="h1">Quiz App</h1>
-  </header>
   <body>
-    <h2 class="h2">Question</h2>
-    <p class="question">What property flips the axes in flexbox?</p>
-    <hover>
-      <button class="Show-Answer">Show Answer</button>
-      <button class="html">html</button>
-      <button class="css">css</button>
-      <button class="flexbox">flexbox</button>
-    </hover>
+    <header>
+      <h1 class="h1">Quiz App</h1>
+    </header>
+    <main>
+      <h2 class="h2">Question</h2>
+      <p class="question">What property flips the axes in flexbox?</p>
+      <hover>
+        <button class="Show-Answer">Show Answer</button>
+        <button class="html">html</button>
+        <button class="css">css</button>
+        <button class="flexbox">flexbox</button>
+      </hover>
+    </main>
+    <footer>
+      <nav class="nav">
+        <a href="#home">Home</a>
+        <a href="bookmarks">bookmarks</a>
+        <a href="profile">profile</a>
+      </nav>
+    </footer>
   </body>
 </html>
